--- a/.github/workflows/build-luajit.yml
+++ b/.github/workflows/build-luajit.yml
@@ -40,7 +40,8 @@ jobs:
     steps:
       - name: release
         run: |
-            echo '[LuaJIT commit](https://github.com/LuaJIT/LuaJIT/commit/${{ needs.build.outputs.LuaJIT_COMMIT }})'
+            echo '[LuaJIT commit](https://github.com/LuaJIT/LuaJIT/commit/${{ needs.build.outputs.LuaJIT_COMMIT }})' >>notes.txt
+            gh release create ${{ needs.build.outputs.OUTPUT_DATE }} -R "${GITHUB_REPOSITORY}" -t '${{ needs.build.outputs.OUTPUT_DATE }}' -F notes.txt
 
       - name: get artifacts
         uses: actions/download-artifact@v4
