--- a/.github/workflows/build-luajit.yml
+++ b/.github/workflows/build-luajit.yml
@@ -3,8 +3,8 @@ name: build-luajit
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: "0 0 * * *"
+#  schedule:
+#    - cron: "0 0 * * *"
 
 jobs:
   build:
